fix: adjust on mobile screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -981,6 +981,14 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:border {
+    border-width: 1px;
+  }
+
   .md\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
@@ -990,6 +998,10 @@ video {
 @media (min-width: 1024px) {
   .lg\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .lg\:border {
+    border-width: 1px;
   }
 
   .lg\:text-8xl {
